@@ -28,6 +28,7 @@ my %WriteMakefileArgs = (
   "TEST_REQUIRES" => {
     "Data::Random" => 0,
     "File::Temp" => 0,
+    "File::stat" => 0,
     "HTTP::Request::Common" => 0,
     "Plack::Test" => 0,
     "Test::Differences" => 0,
@@ -47,6 +48,7 @@ my %FallbackPrereqs = (
   "DBI" => 0,
   "Data::Random" => 0,
   "File::Temp" => 0,
+  "File::stat" => 0,
   "HTTP::Request::Common" => 0,
   "Plack::Test" => 0,
   "Prometheus::Tiny" => "0.004",
